<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.example.pro.Homepage">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:title="@string/app_name"
        app:titleMarginStart="20dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/scenery"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/buttonTextToSpeech"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:background="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_mic"
        android:padding="13dp"
        android:text="@string/Text_To_speech"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:drawableStart="@drawable/ic_mic" />

    <Button
        android:id="@+id/buttonSpeechToText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="320dp"
        android:background="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_volume_up"
        android:padding="13dp"
        android:text="@string/Speech_To_text"
        android:textColor="@color/textColor"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonTextRecognition"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="420dp"
        android:background="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_camera"
        android:padding="13dp"
        android:text="@string/Text_Recognition"
        android:textColor="@color/textColor"
        android:textSize="20sp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/nav_selector"
        app:itemTextColor="@drawable/nav_selector"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>



