<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.example.pro.about_us">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="About Us"
        app:titleMarginStart="40dp"
        tools:ignore="MissingConstraints" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:translationY="540dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/about" />

    <ImageButton
        android:id="@+id/back1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:background="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Speech_Text_Converter"
        android:textColor="@color/textColor"
        android:textSize="22sp"
        android:translationY="90dp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="~Varshini and Roopa"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        android:translationY="120dp" />

    <TextView
        android:id="@+id/textBrowser"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/Browser"
        android:textColor="@color/textColor"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textSize="15dp"
        android:translationX="50dp"
        android:translationY="280dp" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/Email"
        android:textColor="@color/textColor"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textSize="15dp"
        android:translationX="240dp"
        android:translationY="280dp"/>

    <TextView
        android:id="@+id/textInstagram"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/Instagram"
        android:textColor="@color/textColor"
        android:textSize="15dp"
        android:textAlignment="center"
        android:translationX="50dp"
        android:translationY="460dp"
        android:gravity="center_horizontal" />


    <TextView
        android:id="@+id/textMaps"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:textSize="15dp"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:text="@string/Maps"
        android:translationX="240dp"
        android:translationY="460dp"
        android:gravity="center_horizontal" />

    <GridView
        android:id="@+id/gridview"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="25dp"
        android:numColumns="2"
        android:translationY="190dp"
        android:verticalSpacing="90dp" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/nav_selector"
        app:itemTextColor="@drawable/nav_selector"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>