<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/backgroundColor"
    android:layout_height="match_parent"
    tools:context="com.example.pro.text_to_speech">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Text To Speech"
        app:titleMarginStart="40dp"
        tools:ignore="MissingConstraints"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="600dp"
        android:layout_height="300dp"
        android:translationY="550dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/waves3" />

    <ImageButton
        android:id="@+id/back6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:background="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="50dp"
        android:hint="@string/Enter_Text"
        android:textColorHint="@color/textColor"
        android:textColor="@color/textColor" />


    <ImageButton
        android:id="@+id/button_speak"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginBottom="100dp"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_volume_up_blue" />

    <TextView
        android:id="@+id/pitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pitch"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/edit_text"
        android:layout_marginStart="10dp" />

    <SeekBar
        android:id="@+id/seek_bar_pitch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:progress="50"
        android:progressBackgroundTint="@color/textColor"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/pitch"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Speed"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/seek_bar_pitch"
        android:layout_marginStart="10dp" />

    <SeekBar
        android:id="@+id/seek_bar_speed"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:progressBackgroundTint="@color/textColor"
        android:progress="50"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/speed"
        android:layout_marginStart="10dp" />





    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/nav_selector"
        app:itemTextColor="@drawable/nav_selector"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>